# Medbridge-v2

./: .env.example  .gitignore  Dockerfile  HIPAA_COMPLIANCE.md  MARKET_RESEARCH_2026.md  MARKET_RESEARCH_WEB.md  README.md  SKILL.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 794c4801d24a_add_exercise_logs_table.py  8e246e2060d9_create_coaching_domain_tables.py  98da4ecb7f88_add_last_unanswered_message_id_to_.py  a82dc343728b_add_audit_logs_table.py  b1f3a7d92e01_add_app_users_table.py  c3d8f1a25b02_add_reminder_weekly_digest_to_eventtype.py  c9084494de9b_add_direct_messages_and_patient_insights.py  d4e5f6a7b8c9_add_clinical_notes_table.py  e3000fa8693a_clinician_goal_approval_and_nullable_.py  e5f6a7b8c9d0_add_exercise_ratings_table.py  (+3 more)
app/: database.py  main.py
app/api/: alerts.py  (+9 more)
frontend/: .env.example  Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
scripts/: seed_demo.py  wipe_firebase_users.html
tests/: conftest.py  test_active_graph.py  test_alerts_api.py  test_chat_api.py  test_coach_service_stream.py  test_coach_tools.py  test_consent_api.py  test_consent_gate.py  test_consent_status.py  test_context_management.py  test_cors.py  test_disengagement.py  test_followup_service.py  test_health.py  test_insight_generation.py  test_install.py  test_mi_prompts.py  test_models.py  test_nudge_engine.py  test_phase_machine.py  test_re_engaging_graph.py  test_risk_scoring.py  test_router_graph.py  test_safety_classifier.py  test_safety_pipeline.py  test_structure.py  test_video_progress.py  test_weekly_digest.py
(+171 files in other folders)
